--- a/table-mdn/styles.css
+++ b/table-mdn/styles.css
@@ -22,7 +22,7 @@ th {
 td {
   text-align: center;
 }
-
+/*
 tr:nth-child(even) td {
   background-color: rgb(250,250,250);
 }
@@ -30,7 +30,7 @@ tr:nth-child(even) td {
 tr:nth-child(odd) td {
   background-color: rgb(245,245,245);
 }
-
+*/
 caption {
   padding: 10px;
 }
