--- a/table-mdn/css/advanced-table-project.css
+++ b/table-mdn/css/advanced-table-project.css
@@ -1,11 +1,21 @@
 th, td {
 	padding: 0.3em;
+	text-align: center;
+}
+
+theader, tfoot {
+	color: white;
+	background-color: black;
 }
 
 tbody tr:nth-child(odd){
 	background-color: #F9F5EB;
 }
 
-#scope {
+.scope {
 	background-color: #FCF8E8;
+}
+
+.headers {
+	background-color: #F5E8E4;
 }
